--- a/styles/color_generation.css
+++ b/styles/color_generation.css
@@ -52,6 +52,7 @@ footer {
     border: 1px solid #333333;
     margin-top: 20px;
     margin-bottom: 10px;
+    color: #333333;
     
 }
 
@@ -61,6 +62,7 @@ footer {
     height: 30px;
     text-align: center;
     background-color: #CCCCCC;
+    color: #333333;
 }
 
 /*new changes*/
@@ -68,9 +70,11 @@ footer {
     margin: 0 auto;
     width: 750px;
     border: 2px solid #333333;
+    color: #333333;
 }
 #top-table-container td {
     background-color: #CCCCCC;
+    color: #333333;
 
 }
 button {
